public/css/finallayout.css
/* NAVIGATION BAR START */

* {
  margin: 0;
  padding: 0;

}
html {
 min-height: 100vh;
 background-color: #f1f1f1;
}

body::-webkit-scrollbar {
  display: none;
}

body {
  font-family: Montserrat;
  height: 100%;
  -ms-overflow-style: none;
  scrollbar-width: none;
}

.nav-links a {
  text-decoration: none;
}

.navbar {
  display: flex;
  align-items: center;
  justify-content: space-between;
  padding: 20px;
  background-color: #c71f37;

}

.nav-links a {
  color: #f1f1f1;
}

.logoimg {
  height: 50px;
  width: auto;
  cursor: pointer;
}

.menu {
  display: flex;
  gap: 2em;
  font-size: 18px;
}

.menu li:hover {
  font-size: 20px;
  padding: 4px 25px;
  transition: 0.3s ease;
}

.menu li {
  padding: 5px 14px;
  list-style: none;
}

.faq {
  position: relative; 
}

.dropdown {
  background-color: #c71f37;
  box-shadow: 4px 4px #f1f1f1;
  border-radius: 10px;
  padding: 1em 0;
  z-index: 2;
  position: absolute; 
  display: none;
  border-radius: 5px;
  top: 30px;
}

.dropdown li + li {
  margin-top: 10px;
}

.dropdown li {
  padding: 0.5em 1em;
  width: 10em;
  font-size: 18px;
  text-align: center;
}

.dropdown li:hover {
  padding: 0.5em 1em;
  width: 10em;
  font-size: 21px;
}

.faq:hover .dropdown {
  display: block;
}

input[type=checkbox], input[type=radio]{
  display: none;
} 

.hamburger {
  display: none;
  font-size: 18px;
  user-select: none;
}

@media (max-width: 768px) {
  .menu { 
    display:none;
    position: absolute;
    background-color: #c71f37;
    margin-top: 20px;
    right: 0;
    left: 0;
    text-align: center;
    padding: 30px 0;
    z-index: 2;

  }

  .menu li:hover {
    display: inline-block;
    transition: all ease-in-out 250ms;
  }

  .menu li + li {
    margin-top: 30px;
  }

  #checkbox_toggle:checked ~ .menu{
    display: block;
  }

  .hamburger {
    color: #f1f1f1;
    display: block;
  }

  .dropdown {
    left: 50%;
    top: 50px;
    border-radius: 10px;
    transform: translateX(-30%);
  }

  .dropdown li:hover {
    padding: 0.5em 1em;
    width: 10em;
    font-size: 21px;
  }
}

/* NAVIGATION BAR END */

/* MAIN CONTENT CONTAINER START */

.main {
  position: relative;
  display: flex;  
  justify-content: space-around;
  align-items: center;
  flex-direction: column;
}

.redBtn {

  background-color: #c71f37;
  color: #f1f1f1;
  font-family: montserrat;
  padding: 10px;
  border: none;
  cursor: pointer;
}

.nodesignBtn {
  background-color: transparent;
  border: none;
  margin-right: 5px;
}

.nodesignBtn:hover {
  color: #c71f37;
}

.pdf {
  padding-right: 5px;
}
/* MAIN CONTENT CONTAINER END */

/* USER DASHBOARD START */

.profileCont {
  background-image: url("../img/SUDRbg2.jpg");
  background-attachment: fixed;
  background-size: cover;
  background-position: center;
  width: 100%;
  height: 100%;
  display: flex;
  flex-direction: column;
}

.profileCard {
  background: rgba(255, 255, 255, 0.5);
  width: 100%;
  padding-top: 40px;
  padding-bottom: 5px;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-evenly;
}

.changePwBlock {
  display: flex;
  margin: 30px;
  justify-content: center;
}

.colEmailBlock {
  display: flex;
  flex-direction: column;
  align-items: center;
  margin-bottom: 20px;
}

.userTypeBlock {
  display: flex;
  align-items: center;
  margin-bottom: 10px;
}

.adminViewBtn {
  margin-right: 10px;
}

.changePwBlock, .colEmailBlock{
  display: none;
}

.profDown:before {
  font-family: fontawesome;
  font-weight: normal;
}

.profDown:before {
  content: '\f078';
  
}

#profView:checked ~ .profDown:before {
  content: '\f077';
}

.profDown {
  text-align: center;
  padding: 10px;
}

.changePwBlock, .colEmailBlock{
  display: none;
}

#profView:checked ~ .changePwBlock,
#profView:checked ~ .colEmailBlock{
  display: flex;
}

  /* USER PROFILE CARD START */

    .placeholderPic {
      display: flex;
      justify-content: center;
      width: 100%;
      align-items: center;
      }

    .placeholderPic img {
      width: 150px;
      height: 150px;
      border-radius: 20px;
    }

    .userName, .fullNameBlock {
      padding-top: 15px;
    }

    .fullNameBlock {
      display: flex;
      flex-direction: column;
      align-items: center;
      justify-content: center;
    }

    .midLastName {
      display: flex;
    }

    .midLastName h2 {
      padding-left: 5px;
    }


.modal {
  display: none; 
  position: fixed;
  z-index: 15; 
  padding-top: 100px;
  left: 0;
  top: 0;
  width: 100%; 
  height: 100%;
  overflow: auto;
  background-color: rgb(0,0,0);
  background-color: rgba(0,0,0,0.4); 
}

.modal-content {
  background-color: #fefefe;
  margin: auto;
  padding: 20px;
  border: 1px solid #888;
  width: 50%;
}

.modalinfoCont {
  margin: 16px;
}

.citemodalCont {
  max-height: 50vh;
  overflow: auto;
}

.close {
  color: #aaaaaa;
  float: right;
  font-size: 28px;
  font-weight: bold;
}

.close:hover,
.close:focus {
  color: #000;
  text-decoration: none;
  cursor: pointer;
}


  /* USER PROFILE CARD END */


/* FUNCTIONS CARD START */
.userFunctionsCard {
  background-color: #f1f1f1;
  width: 100%;
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
}

::selection{
  background: #c71f37;
  color: #fff;
}

.container{
  width: 100%;
  height: 85%;
  margin: 50px 20px;
  border-radius: 12px;
}

.container .topic{
  font-size: 30px;
  font-weight: 500;
  margin-bottom: 20px;
}

.content{
  height: 100%;
  display: flex;
  justify-content: space-between;
}

.content .list{
  display: flex;
  flex-direction: column;
  width: 30%;
  margin-right: 50px;
  position: relative;
}

.content .list label{
  height: 60px;
  font-size: 22px;
  font-weight: 500;
  line-height: 60px;
  cursor: pointer;
  padding-left: 25px;
  transition: all 0.5s ease;
  color: #333;
  z-index: 12;
}

#add:checked ~ .list label.add,
#mypaper:checked ~ .list label.mypaper,
#bookmark:checked ~ .list label.bookmark{
  color: #fff;
}
/* ... */

